@@ -130,7 +130,7 @@ namespace Orthanc
   {
     MetadataType_Instance_IndexInSeries = 1,
     MetadataType_Instance_ReceptionDate = 2,
-    MetadataType_Instance_RemoteAet = 3,
+    MetadataType_RemoteAet = 3,   // Renamed from "MetadataType_Series_RemoteAet" in Orthanc 1.9.0
     MetadataType_Series_ExpectedNumberOfInstances = 4,
     MetadataType_ModifiedFrom = 5,
     MetadataType_AnonymizedFrom = 6,
